# shell-like

./: .gitignore  1pipe.c  CMakeLists.txt  README.md  main.c  makefile  parsetools.c  parsetools.h
